Regression: File crashes the program #111235

Closed
opened 2023-08-17 18:42:46 +02:00 by Saw-Kyaw-Ei-Thet · 2 comments
First-time contributor

System Information
Operating system: Windows-11-Version 10.0.22621 Build 22621
Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.86

Blender Version
Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: e53e55951e7a
Worked: (newest version of Blender that worked as expected)

Short description of error
It keeps crashing (as in turning itself off without the "crash window") when I try to open this specific project file.

Exact steps for others to reproduce the error
Open

**System Information** Operating system: Windows-11-Version 10.0.22621 Build 22621 Graphics card: NVIDIA GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.86 **Blender Version** Broken: version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash: `e53e55951e7a` Worked: (newest version of Blender that worked as expected) **Short description of error** It keeps crashing (as in turning itself off without the "crash window") when I try to open this specific project file. **Exact steps for others to reproduce the error** Open
Saw-Kyaw-Ei-Thet added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-17 18:42:47 +02:00

Can confirm crash in 3.6.2.
Can't in today debug of 4.0 and in 3.6.0: Loading "C:\Users\rfnei\Downloads\Denji apartment.blend" failed: Failed to read blend file 'C:\Users\rfnei\Downloads\Denji apartment.blend': Missing DNA block.
Look like regression only for 3.6.2.

Can confirm crash in 3.6.2. Can't in today debug of 4.0 and in 3.6.0: `Loading "C:\Users\rfnei\Downloads\Denji apartment.blend" failed: Failed to read blend file 'C:\Users\rfnei\Downloads\Denji apartment.blend': Missing DNA block`. Look like regression only for 3.6.2.
Iliya Katueshenock changed title from File crashes the program to Regression: File crashes the program 2023-08-17 19:55:14 +02:00
Philipp Oeser removed the
Interest
Overrides
label 2023-08-18 13:28:01 +02:00
Member

CC @mont29

CC @mont29
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-08-21 16:28:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111235
No description provided.