Fix #111235: invalid .blend file can crash on load.

Somehow the backport for 3.3 diverged from commits to main (4.0), and
the case were the DNA block would go missing would not anymore prevent
handling of further `is_minversion_older_than_blender` test in
`blo_decode_and_check`.