source/blender/blenloader/intern/readfile.c
@@ -1258,7 +1258,7 @@ static FileData *blo_decode_and_check(FileData *fd, ReportList *reports)
       blo_filedata_free(fd);
       fd = NULL;
     }
-    if (is_minversion_older_than_blender(fd, reports)) {
+    else if (is_minversion_older_than_blender(fd, reports)) {
       blo_filedata_free(fd);
       fd = NULL;
     }
