source/blender/blenloader/intern/readfile.cc
@@ -1159,7 +1159,7 @@ static FileData *blo_decode_and_check(FileData *fd, ReportList *reports)
       blo_filedata_free(fd);
       fd = nullptr;
     }
-    if (is_minversion_older_than_blender(fd, reports)) {
+    else if (is_minversion_older_than_blender(fd, reports)) {
       blo_filedata_free(fd);
       fd = nullptr;
     }
